Remove deprecated maven opts